--- a/options.html
+++ b/options.html
@@ -5,7 +5,7 @@
 	<script type="text/javascript" src="jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="options.js"></script>
 </head>
-<body style="font-family: sans-serif; text-align: center; margin: 100px 0;">
+<body style="font-family: sans-serif; text-align: center; margin: 100px;">
 	<h1>Please enter your WaniKani API key below</h1>
 	<p>You can find your <strong>Public API Key</strong> in your <a href="https://www.wanikani.com/account" target="_blank">Account Settings</a></p>
 	<input style="width: 400px;" id="key" /><button id="go">Save</button>
