--- a/options.html
+++ b/options.html
@@ -2,20 +2,26 @@
 <html>
 <head>
 	<title>WaniKani Notifier Settings</title>
+	<link href="options.css" rel="stylesheet" type="text/css">
 	<script type="text/javascript" src="jquery-2.1.3.min.js"></script>
 	<script type="text/javascript" src="options.js"></script>
-	<style>
-	
-	</style>
 </head>
-<body style="font-family: sans-serif; font-size: 16px; text-align: center; margin: 50px; min-width: 500px;">
+<body>
 	<img src="icons/128.png" alt="WaniKani Logo" />
-	<br /><br /><br />
-	<p style="display: inline-block; font-weight: bold; margin: 0;">WaniKani API key:</p> <input style="width: 275px; display: inline-block;" id="key" />
-	<p style="margin-top: 10px;">(You can find your <strong>Public API Key</strong> in your <a href="https://www.wanikani.com/account" target="_blank" style="color: #882344;">Account Settings</a>)</p>
-	<br />
-	<p style="display: inline-block; font-weight: bold;">Minimum reviews before icon appears:</p> <input style="width: 100px; display: inline-block;" id="minimum" type="number" />
-	<br /><br />
-	<button id="save" style="width: 150px; font-size: 24px; line-height: 2; background: #882344; color: #fff; border: none; border-radius: 3px;" onclick="saveSettings();">Save</button>
+	<div class="spacer s50"></div>
+	<div>
+		<label for="key">WaniKani API key:</label>
+		<input id="key" />
+		<span>(You can find your <strong>Public API Key</strong> in your <a href="https://www.wanikani.com/settings/account" target="_blank">Account Settings</a>)</span>
+	</div>
+	<div class="spacer s75">
+		<div id="alert"></div>
+	</div>
+	<div>
+		<label for="minimum">Minimum reviews before icon appears:</label>
+		<input id="minimum" type="number" min="1" />
+	</div>
+	<div class="spacer s25"></div>
+	<button id="save" onclick="saveSettings();">Save</button>
 </body>
 </html>
