Replace v1 api with v2 api

--- a/options.html
+++ b/options.html
@@ -9,7 +9,7 @@
 	<img src="icons/red.png" alt="WaniKani" />
 	<div class="spacer s50"></div>
 	<div>
-		<label for="key">WaniKani API key:</label>
+		<label for="key">WaniKani V2 API key:</label>
 		<input id="key" />
 		<span>(You can find your <strong>Public API Key</strong> in your <a href="https://www.wanikani.com/settings/account" target="_blank">Account Settings</a>)</span>
 	</div>
